--- a/浏览器/css/clearStyle.css
+++ b/浏览器/css/clearStyle.css
@@ -56,3 +56,11 @@ hr {
     border: none;
     height: 1px;
 }
+a, button, input {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: none;
+    outline: none;
+}
+a {
+    text-decoration: none;
+}
