--- a/浏览器/css/common.css
+++ b/浏览器/css/common.css
@@ -1,6 +1,17 @@
+.fr{
+    float: right !important;
+}
+.fl {
+    float: left !important;
+}
+.clearFix {
+    content: "";
+    display: block;
+    clear: both;
+}
 body {
     padding-top: 50px;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     color: #5a5a5a;
 }
 .navbar-brand-icon{
@@ -25,6 +36,7 @@ body {
 
 .carousel .item img {
     width: 100%;
+    height: 100%;
 }
 
 .carousel-caption {
@@ -50,22 +62,68 @@ body {
 }
 
 /* 特性 */
-
+.tab-content{
+    margin-top: -45px;
+}
 .feature-divider {
     margin: 40px 0;
 }
-
+.index-list{
+    width: 100%;
+    background-color: #FBFBFF;
+}
 .feature {
-    padding: 30px 0;
+    padding: 40px 0 60px;
+    width: 1060px;
+    min-width: 1060px;
+    margin: 0 auto;
 }
 
 .feature-heading {
-    font-size: 50px;
-    color: #2a6496;
+    font-size: 45px;
+    color: #4A4A4A;
+    /* font-family: PingFangSC-Regular; */
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    font-family: PingFangSC,Lantinghei SC,Open Sans,Arial,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,STHeiti,WenQuanYi Micro Hei,SimSun,sans-serif;
+    font-weight: 400;
+    /* font-size: 50px;
+    color: #2a6496; */
 }
 
 .feature-heading .text-muted {
-    font-size: 28px;
+    font-size: 24px;
+}
+
+.feature p:before {
+    content: "";
+    display: block;
+    width: 8px;
+    height: 8px;
+    background: #FFFFFF;
+    border-radius: 50%;
+    margin: 0 auto;
+    left: 731px;
+    border: 2px solid #FF5B5F;
+    position: absolute;
+    top: 20px;
+    left: 0;
+}
+.feature p {
+    font-size: 18px;
+    color: #4A4A4A;
+    font-family: PingFangSC-Regular;
+    text-align: left;
+    margin: 0 auto;
+    line-height: 48px;
+    padding-left: 30px;
+    position: relative;
+    max-height: 100%
+}
+.feature .feature-image{
+    width: 400px;
+    margin-top: 50px;
 }
 /*社保流程*/
 .my-flow {
@@ -283,7 +341,34 @@ body {
 .dis-block{
     display: block;
 }
+/*扫码关注*/
+.my-scan {
+    width: 100%;
+    height: 380px;
+    background: transparent url("../img/bg-scan.png") center/100% 100% no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
+  .my-scan .des {
+    margin-right: 200px;
+  }
+
+  .my-scan .des p:nth-child(1) {
+    font-size: 2rem;
+    color: #333;
+  }
+
+  .my-scan .des p:nth-child(2) {
+    color: #333;
+    font-size: 18px;
+  }
+
+  .my-scan img {
+    width: 178px;
+    height: 178px;
+  }
   /*底部内容*/
   .footer-container {
     padding-top: 80px;
@@ -302,7 +387,7 @@ body {
 
   .footer-container {
     overflow: hidden;
-    margin-bottom: 90px;
+    /* margin-bottom: 90px;s */
   }
 
   .footer-l {
