--- a/浏览器/css/common.css
+++ b/浏览器/css/common.css
@@ -49,6 +49,127 @@ body {
     line-height: 1.8;
 }
 
+/* banner */
+.shebao_banner {
+  background-image: url(../img/banner.png);
+}
+.shebao_common_banner {
+  position: relative;
+  width: 100%;
+  height: 270px;
+  background-size: 100% 270px;
+  background-position: center 0;
+  background-repeat: no-repeat;
+}
+.common_center {
+  width: 100%;
+  margin: 0 auto;
+  /* min-width: 1060px; */
+  padding-top: 30px;
+}
+.banner_title {
+  font-size: 30px;
+  color: #FFFFFF;
+  font-family: PingFangSC-Regular;
+  text-align: center;
+  margin: 0 auto;
+  margin: 0 auto 22px;
+}
+.banner_info {
+  font-size: 24px;
+  color: #FFFFFF;
+  font-family: PingFangSC-Regular;
+  text-align: center;
+  margin: 0 auto;
+}
+.button_group {
+  width: 352px;
+  margin: 56px auto 0;
+  font-size: 0;
+}
+.shebao_button_left, .shebao_button_right {
+  width: 154px;
+  height: 52px;
+  line-height: 52px;
+  display: inline-block;
+}
+.shebao_button_left, .shebao_button_right {
+  width: 154px;
+  height: 52px;
+  line-height: 52px;
+  display: inline-block;
+}
+.shebao_button_left {
+  margin-right: 40px;
+}
+.shebao_button_left:hover {
+  background-color: #F34C50;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.shebao_button_right:hover {
+  background-color: #FF5B5F;
+  color: #FFFFFF;
+  border-color: #FF5B5F;
+  text-decoration: none;
+}
+.button_red {
+  display: inline-block;
+  width: 152px;
+  height: 48px;
+  line-height: 48px;
+  border-radius: 3px;
+  background-color: #FF5B5F;
+  color: #FFFFFF;
+  font-size: 18px;
+  text-align: center;
+  font-family: PingFangSC-Regular;
+  border: 1px solid #FF5B5F;
+  cursor: pointer;
+}
+.button_white2 {
+  display: inline-block;
+  width: 152px;
+  height: 48px;
+  line-height: 48px;
+  border-radius: 3px;
+  background-color: #FF5B5F;
+  font-size: 18px;
+  text-align: center;
+  font-family: PingFangSC-Regular;
+  border: 1px solid #FF5B5F;
+  cursor: pointer;
+  background: none;
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+
+a, button, input {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
+  outline: none;
+}
+a {
+  text-decoration: none;
+  color: #9898A1;
+}
+@media (min-width: 960px) {
+  .shebao_common_banner {
+      width: 100%;
+      height: 450px;
+      background-size: 100% 450px;
+      background-position: center 0;
+      background-repeat: no-repeat;
+  }
+  .common_center {
+      min-width: 1060px;
+      padding-top: 117px;
+  }
+  .banner_title {
+      font-size: 40px;
+  }
+}
+
 /* 简介 */
 
 .summary {
@@ -218,7 +339,7 @@ body {
 @media (min-width: 768px) {
     .navbar-nav > li {
         float: left;
-        margin: 0 30px;
+        margin: 0 10px;
     }
 }
 .carousel-indicators{
@@ -630,4 +751,171 @@ body {
         padding: 30px 20px;
         transition: height .5s linear;
     }
+}
+
+#user_register {
+  margin-top: 72px;
+  width: 100%;
+  height: 648px;
+  background: #FFFFFF;
+  border-radius: 0;
+  margin: 0 auto;
+  min-width: 1100px;
+  background: url('https://www.51shebao.com/statics/output/images/v6_images/common/experise_bg.png') no-repeat center 0;
+  background-size: 100% 648px;
+  padding: 100px 0;
+}
+.register_content {
+  width: 400px;
+  margin: 0 auto;
+}
+.register_title {
+  font-size: 32px;
+  color: #FFFFFF;
+  font-family: PingFangSC-Regular;
+  text-align: center;
+  margin: 0 auto;
+  font-family: PingFangSC-Light;
+  margin-bottom: 43px;
+}
+.register_list li {
+  width: 400px;
+  height: 52px;
+  position: relative;
+  z-index: 3;
+  margin-bottom: 20px;
+}
+.register_list li .icon {
+  position: absolute;
+  top: 18px;
+  left: 20px;
+  width: 18px;
+  height: 18px;
+  background: url('../img/icon-work.png') no-repeat center 0;
+  background-size: 18px 18px;
+  z-index: 20;
+}
+.register_list li input {
+  display: block;
+  width: 400px;
+  height: 52px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  font-size: 16px;
+  color: #333333;
+  font-family: PingFangSC-Regular;
+  text-align: left;
+  margin: 0 auto;
+  padding: 16px 0 14px 60px;
+  border: 1px solid #FFFFFF;
+}
+.iIcon {
+  position: absolute;
+  top: 19px;
+  left: 372px;
+  display: block;
+  color: #EB2323;
+  font-size: 24px;
+  font-style: normal;
+  line-height: 24px;
+  height: 24px;
+}
+.register_list li .icon2 {
+  background: url('../img/icon-phone.png') no-repeat center 0;
+  background-size: 16px 18px;
+}
+.register_list li .icon3 {
+  width: 20px;
+  background: url('../img/icon-email.png') no-repeat center 0;
+  background-size: 20px auto;
+}
+.register_list li .icon4 {
+  width: 20px;
+  background: url('../img/icon-place.png') no-repeat center 0;
+  background-size: 20px 18px;
+}
+.company_size_list {
+  display: none;
+  position: absolute;
+  top: 52px;
+  left: 0;
+  width: 400px;
+  height: 225px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  margin: 0 auto;
+  padding-top: 10px;
+  box-shadow: 0px 2px 28px 0px rgba(0, 0, 66, 0.08);
+}
+.company_size_list li {
+  width: 400px;
+  height: 48px;
+  background: #FFFFFF;
+  border-radius: 0;
+  font-size: 16px;
+  color: #333333;
+  font-family: PingFangSC-Regular;
+  text-align: left;
+  margin: 0 auto;
+  padding-left: 28px;
+  line-height: 48px;
+  cursor: pointer;
+}
+.form_submit {
+  width: 398px;
+  height: 52px;
+  background: #FF5B5F;
+  border-radius: 4px;
+  margin: 0 auto;
+  margin-top: 40px;
+  line-height: 52px;
+}
+.submit_red {
+  line-height: 52px;
+  border-radius: 3px;
+  background-color: #FF5B5F;
+  color: #FFFFFF;
+  font-size: 18px;
+  text-align: center;
+  font-family: PingFangSC-Regular;
+  border: 1px solid #FF5B5F;
+  cursor: pointer;
+}
+input, button, textarea {
+  padding: 0;
+  outline: none;
+}
+.message_mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 6;
+  display: none;
+}
+.message_mask_show{
+  display: block;
+}
+.message_mask .fail_sign, .message_mask .succ_sign {
+  position: relative;
+  width: 240px;
+  background: rgba(0, 0, 0, 0.7);
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  line-height: 20px;
+  font-size: 14px;
+  padding: 30px;
+}
+.message_mask .fail_sign #dilog_tit, .message_mask .succ_sign #dilog_tit {
+  display: none;
+  font-size: 18px;
+  margin-bottom: 6px;
 }
